Exclude ar-001 from the available locale list

Bug: 789905
Test: CrOS OOBE language menu does not have ar-001.
Change-Id: I5f9489edf5819e789558bf53ddb4ecbb389e6a45